# UGNN

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/examples/: minimal_example.doctree
.doctrees/source/: data.doctree  installation.doctree  modules.doctree  ugnn.doctree  ugnn.utils.doctree
.github/workflows/: deploy-docs.yml  docs.yml  python-tests.yml  sphinx.yml
_modules/: index.html
_modules/ugnn/: config.html  conformal.html  experiment_config.html  experiments.html  networks.html
_sources/: index.rst.txt
_sources/examples/: minimal_example.rst.txt
_sources/source/: data.rst.txt  modules.rst.txt  ugnn.rst.txt  ugnn.utils.rst.txt
data/: __init__.py
data/flight/: flight_processing.py
data/sbm/: sbm_processing.py
data/school/: school_processing.py
docs/: conf.py  index.rst
docs/source/: data.rst  modules.rst  (+1 more)
examples/: conformal_example.ipynb  example.py  example_embedding.py  minimal_example.py  new_example.py  old_sbm_experiments.py  old_sbm_results.py  train_example.py
experiments/: analyse_results.py  run_all_experiments.sh  run_conformal_experiment.py  run_experiment.py  sbm_experiment.py
source/: data.html  modules.html  ugnn.html
tests/: test_conformal.py  test_experiments.py  test_minimal_example.py  test_networks.py  test_utils.py
ugnn/: __init__.py  config.py  conformal.py  experiment_config.py  experiments.py  gnns.py  networks.py  results_manager.py  types.py  utils.py
(+86 files in other folders)
