[project]
name = "ugnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "edwarddavis1", email = "edwarddavis@hotmail.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.4",
    "pyemb==1.0.0a13",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
]

[project.scripts]
ugnn = "ugnn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "sphinx>=8.2.3",
]
