[project]
name = "ugnn"
version = "0.1.0"
description = "Welcome to the documentation for **UGNN**, a library for using the **unfolded graph neural network** (UGNN) model for discrete-time dynamic graphs."
readme = "README.md"
authors = [
    { name = "edwarddavis1", email = "edwarddavis@hotmail.co.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "numpy>=2.2.4",
    "plotly>=6.0.1",
    "pyemb[plotting]==1.0.0a13",
    "scipy>=1.14.1",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
]

[project.scripts]
ugnn = "ugnn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "sphinx>=8.2.3",
]
